--- a/mavenProject/src/main/webapp/index.html
+++ b/mavenProject/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<htm
+<html>
     <head>
         <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -7,4 +7,8 @@
     <body>
         <h1>Hello World!</h1>
     </body>
+    <h1>
+    </h1>
+    <div>
+    </div>
 </html>
