--- a/mavenProject/src/main/webapp/index.html
+++ b/mavenProject/src/main/webapp/index.html
@@ -2,13 +2,10 @@
 <html>
     <head>
         <title>Start Page</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-785">
+    </header>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Hello World!</h1>;
     </body>
     <h1>
-    </h1>
-    <div>
-    </div>
 </html>
